# Magellon

./: .gitattributes  .gitignore  README.md  acorrstacks.py
CoreService/: CoreService.rar  Dockerfile  MyNotes.md  Readme.md  alembic.ini  config.py  config_dev.py  config_prod.py  database.py  entrypoint.sh  leginon_frame_transfer_job_service  logger_config.py  main.py  messages.md  pyproject.toml  pytest.ini  requirements.txt  test_user_auth_debug.py  worker_all.py  worker_ctf.py  worker_motioncor.py  worker_thumbnail.py
CoreService/.claude/: settings.local.json
CoreService/activities/: __init__.py  image_processing_activities.py
CoreService/airflow/: airflow.rar
CoreService/alembic/: README.md  baseline_schema.sql  env.py
CoreService/config/: app_settings_dev.yaml  app_settings_prod.yaml  config.py  config_dev.py  config_prod.py  logger_config.py
CoreService/configs/: app_settings_dev.yaml  app_settings_prod.yaml  casbin_model.conf  config_dev.py  config_prod.py  production_test.py
CoreService/controllers/: admin_broker_controller.py  admin_dispatch_cache_controller.py  admin_plugin_install_controller.py  artifacts_controller.py  camera_controller.py  cancellation_controller.py  db_controller.py  deployment_docker_controller.py  dispatch_controller.py  graph_controller.py  health_controller.py  home_controller.py  image_meta_data_category_controller.py  image_meta_data_controller.py  image_processing_controller.py  image_processing_tools.py  image_viewer_controller.py  import_controller.py  import_export_controller.py  ops_controller.py  particle_export_pipeline_controller.py  particle_picking_controller.py  particle_picking_jobitem_controller.py  pipelines_controller.py  plugin_registry_controller.py  relion_controller.py  schema_controller.py  slack_controller.py  sys_sec_user_controller.py  system_stats_controller.py  test_controller.py  test_rls_controller.py  webapp_atlas_controller.py  webapp_controller.py  webapp_motioncor_controller.py  webapp_particles_controller.py  workflow_job_controller.py
CoreService/core/: background_services.py  cors.py  dev_routes.py  dispatch_builders.py  dispatcher_registry.py  environment.py  exception_handlers.py  exceptions.py  file_utils.py  helper.py  installed_plugins.py  motioncor_dispatch.py  motioncor_test_result_processor.py  paths.py  plugin_catalog.py  plugin_docker_runner.py  plugin_liveness_registry.py  plugin_log_stream.py  plugin_state.py  queue_names.py  rabbitmq_client.py  request_observability.py  result_consumer.py  rmq_step_event_forwarder.py  serialization.py  socketio_server.py  sqlalchemy_row_level_security.py  step_event_forwarder.py  task_dispatch.py  task_factory.py
CoreService/database/: magellon01db.sql
CoreService/dependencies/: __init__.py  auth.py  auth_dependencies.py  permissions.py
CoreService/docs/: README.md  cryo-em-pipeline.md  magellon_schemal.sql  plugin-developer-guide.md
CoreService/domain/: __init__.py
CoreService/env/: pyvenv.cfg
CoreService/lib/: image_not_found.py  sqlalchemy_json_type.py  sqlalchemy_uuid_type.py
CoreService/models/: cloud_events.py  graphql_schema.py  graphql_strawberry_schema.py  plugins_models.py  pydantic_models.py  pydantic_models_settings.py  pydantic_pipelines_models.py  pydantic_plugins_models.py  relion_pydantic_models.py  sqlalchemy_models.py
CoreService/plugins/: base.py  controller.py  controller_jobs.py  controller_lifecycle.py  controller_registry.py  dispatch_service.py  dispatch_validation.py  in_process_announce.py  install_service.py  progress.py  registry.py  registry_service.py  schemas.py
CoreService/repositories/: ImageMetaDataRepository.py  base_repository.py  camera_repository.py  image_meta_data_category_repository.py  image_metadata_repository.py  image_repository.py  particle_picking_item_repository.py  plugin_repository.py  session_repository.py
CoreService/scripts/: README.md  build_all_mpns.sh  build_fft_mpn.sh  build_template_picker_mpn.sh  ctf_smoke_publish.py  debug_user_auth.py  dispatch_ctf_test.py  dispatch_motioncor_test.py  e2e_smoke.sh  full_reset.py  migrate_dlq_topology.py  motioncor_smoke_publish.py  query_ops.py  redispatch_motioncor_job.py  reset_demo_data.py  reset_demo_data.sql  setup_security_permissions.py  sync_policies_to_casbin.py
CoreService/services/: atlas.py  atlas_Readme.md  authorization_service.py  broker_inspector_service.py  cancellation_service.py  casbin_policy_sync_service.py  casbin_service.py  criteria_parser_service.py  ctf_service.py  db_service.py  diagrams_service.py  dispatch_cache.py  docker_deployment_service.py  epu_frame_transfer_service.py  event_logging_service.py  event_publisher.py  file_service.py  helper.py  image_ctf_service.py  image_db_service.py  image_fft_service.py  image_file_service.py  image_service.py  import_export_service.py  job_event_publisher.py  job_event_writer.py  job_manager.py  job_models.py  job_persistence.py  job_service.py  job_state_projector.py  job_status_service.py  leginon_frame_transfer_job_service.py  magellon_event_service.py  magellon_job_manager.py  motioncor2_service.py  motioncor_test_service.py  mrc_image_service.py  ops_event_logger.py  plugin_catalog_persistence.py  (+9 more)
CoreService/static/: index.html  socketio_test.html
CoreService/support/: job-manager-documentation.md
CoreService/tasks/: fft_computation.py  magellon_import_workflow.yaml  mrc_conversion.py
CoreService/templates/: index.html
CoreService/tests/: 20220605_75157_20220605-aav2spr_1-1_counted_frames.mrc.mdoc  23mar23b_a_00038gr_00003sq_v02_00008hl_v01_00002ex_st_Log.txt  Example1.xml  Serial_EM_Translator.py  conftest.py  epu_parser.py  test_admin_plugin_install_controller.py  test_artifact_orm.py  test_background_services.py  test_camera_controller.py  test_cancellation_controller.py  test_cancellation_service.py  test_canonical_gpfs_path.py  test_canonical_gpfs_path_edges.py  test_canonicalize_property.py  test_casbin_authorization_index.py  (+64 more)
MagellonSdk/: README.md  pyproject.toml
magellon-sdk/: CHANGELOG.md  CONTRACT.md  README.md  pyproject.toml
(+2189 files in other folders)
