[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/magellon_sdk"]


[project]
name = "magellon_sdk"
version = "0.0.2"
authors = [
    { name="Behdad Khoshbin", email="b.khoshbin@gmail.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://magellon.org/magellonsdk"
Issues = "https://github.com/pypa/magellonsdk/issues"