[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/magellon_sdk"]

[project]
name = "magellon-sdk"
version = "1.2.0"
description = "SDK for building Magellon plugins: PluginBase, ProgressReporter, CloudEvents envelope, and executor contracts."
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Behdad Khoshbin", email = "b.khoshbin@gmail.com" },
]
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "pydantic>=2.0",
    # Required by magellon_sdk.archive.manifest (H3a plugin archive format)
    # and by the `magellon-sdk plugin` CLI. Every plugin ships with this
    # already (via the [config] extra) so promoting it to core is free.
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-asyncio>=0.21",
]
rabbitmq = [
    "pika>=1.3",
]
nats = [
    "nats-py>=2.6",
]
logging = [
    "python-json-logger>=2.0",
    "rich>=13.0",
]
config = [
    "pyyaml>=6.0",
]

[project.scripts]
magellon-sdk = "magellon_sdk.cli:main"

[project.urls]
Homepage = "https://magellon.org/magellonsdk"
Repository = "https://github.com/magellon-org/magellon"
Issues = "https://github.com/magellon-org/magellon/issues"


# ---------------------------------------------------------------------------
# MB6.3 — lint rule: the RMQ binder is the only home for pika
# ---------------------------------------------------------------------------
#
# Architectural principle #3 (ARCHITECTURE_PRINCIPLES.md) says layer
# boundaries are lint-enforced, not guideline-enforced. The
# MessageBus migration (MB4–MB6) collapsed all pika usage to the RMQ
# binder; this config blocks any regression.
#
# Enforced bans:
#   - ``pika`` and ``aio_pika`` — all imports outside the binder dir.
#   - ``magellon_sdk.transport.rabbitmq`` — moved to binder-private
#     ``_client.py`` in MB6.2; this ban catches code written against
#     the old path.
#   - ``magellon_sdk.transport.rabbitmq_events`` — deleted in MB6.2.
#
# Allowlisted paths (via per-file-ignores):
#   - ``src/magellon_sdk/bus/binders/rmq/**`` — the binder IS the
#     intended home for pika.
#   - ``tests/**`` — integration tests need real-broker pika access.
[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["TID"]

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"pika".msg = "pika belongs in magellon_sdk/bus/binders/rmq/ only. Use bus.tasks.send / bus.events.publish via the MessageBus (see ARCHITECTURE_PRINCIPLES.md §3)."
"aio_pika".msg = "aio_pika is not used; route via bus.tasks / bus.events."
"magellon_sdk.transport.rabbitmq".msg = "Moved to magellon_sdk.bus.binders.rmq._client in MB6.2. Production callers should use the bus API, not the client directly."
"magellon_sdk.transport.rabbitmq_events".msg = "Deleted in MB6.2. Step events flow via bus.events; see magellon_sdk.events.StepEventPublisher."

[tool.ruff.lint.per-file-ignores]
"src/magellon_sdk/bus/binders/rmq/**" = ["TID251", "TID252", "TID253"]
"tests/**" = ["TID251", "TID252", "TID253"]
