[project]
name = "magellon-boxnet-plugin"
version = "0.1.0"
description = "External (broker-resident) BoxNet CNN particle picker for Magellon."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Behdad Khoshbin", email = "b.khoshbin@gmail.com" },
]

dependencies = [
    "magellon-sdk[rabbitmq,nats,logging,config]>=2.1,<3.0",

    "fastapi",
    "uvicorn",
    "pydantic",
    "rich",
    "pyyaml",
    "python-json-logger",
    "prometheus-client",
    "prometheus-fastapi-instrumentator",
    "python-dotenv",

    "pika==1.3.2",

    # Compute stack
    "mrcfile>=1.5.0",
    "numpy>=1.26.4",
    "scipy>=1.13.0",
    "scikit-image>=0.22.0",
    "Pillow>=10.4.0",
    # Torch is heavy; CPU wheel is enough for the default deployment.
    "torch>=2.0",
    # BoxNet's `.pt` is an onnx2torch-converted graph; the module-load
    # path depends on this package even though we never call it directly.
    "onnx2torch>=1.5",
]

[dependency-groups]
dev = [
    "pytest>=7",
    "pytest-asyncio>=0.21",
]

[tool.uv]
package = false

[tool.uv.sources]
# Bundled wheel (cross-host portable). Refresh via
# ``scripts/rebuild-sdk-wheels.sh`` after editing the SDK.
magellon-sdk = { path = "wheels/magellon_sdk-2.4.0-py3-none-any.whl" }
