[project]
name = "magellon-can-classifier-plugin"
version = "0.1.0"
description = "CAN 2D-classification plugin for Magellon — competitive-Hebbian topology + MRA on a RELION particle stack."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Behdad Khoshbin", email = "b.khoshbin@gmail.com" },
]

dependencies = [
    "magellon-sdk[rabbitmq,nats,logging,config]>=2.0,<3.0",

    "fastapi",
    "uvicorn",
    "pydantic",
    "rich",
    "pyyaml",
    "python-json-logger",
    "prometheus-client",
    "prometheus-fastapi-instrumentator",
    "python-dotenv",

    "pika==1.3.2",

    "mrcfile==1.5.0",
    "numpy==1.26.4",
    "scipy==1.12.0",

    # Phase 7b runtime deps (2026-05-03). Required for the vendored
    # CAN algorithm in plugin/algorithm/classifier.py. Plugin contract
    # tests don't need them — compute.py loads them lazily via
    # ``from plugin.algorithm import ...`` inside classify_stack.
    "torch>=2.0,<3.0",
    "scikit-image>=0.22,<0.25",
    "scikit-learn>=1.4,<2.0",
]

[dependency-groups]
dev = [
    "pytest>=7",
    "pytest-asyncio>=0.21",
]

[tool.uv]
package = false

[tool.uv.sources]
magellon-sdk = { path = "../../magellon-sdk", editable = true }
