[project]
name = "magellon-template-picker-plugin"
version = "0.1.0"
description = "External (broker-resident) FFT-correlation template-matching particle picker for Magellon."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Behdad Khoshbin", email = "b.khoshbin@gmail.com" },
]

dependencies = [
    "magellon-sdk[rabbitmq,nats,logging,config]>=2.1,<3.0",

    "fastapi",
    "uvicorn",
    "pydantic",
    "rich",
    "pyyaml",
    "python-json-logger",
    "prometheus-client",
    "prometheus-fastapi-instrumentator",
    "python-dotenv",

    "pika==1.3.2",

    "mrcfile>=1.5.0",
    "numpy>=1.26.4",
    "scipy>=1.13.0",
    "Pillow>=10.4.0",
    "cachetools>=5.3",
]

[dependency-groups]
dev = [
    "pytest>=7",
    "pytest-asyncio>=0.21",
]

[tool.uv]
package = false

[tool.uv.sources]
# Bundled wheel (cross-host portable). Refresh via
# ``scripts/rebuild-sdk-wheels.sh`` after editing the SDK.
magellon-sdk = { path = "wheels/magellon_sdk-2.2.0-py3-none-any.whl" }
